add log of proc switch(use flush to avoid IPC in ring 0)

--- a/Code/.vscode/settings.json
+++ b/Code/.vscode/settings.json
@@ -4,4 +4,8 @@
     "lldb.dereferencePointers": true,
     "lldb.consoleMode": "commands",
     "lldb.commandCompletions": true,
+    "files.associations": {
+        "log.h": "c",
+        "proto.h": "c"
+    },
 } 
