--- a/Code/Makefile
+++ b/Code/Makefile
@@ -30,7 +30,7 @@ LIB		= lib/orangescrt.a
 OBJS		= kernel/kernel.o kernel/start.o kernel/main.o\
 			kernel/clock.o kernel/keyboard.o kernel/tty.o kernel/console.o\
 			kernel/i8259.o kernel/global.o kernel/protect.o kernel/proc.o\
-			kernel/systask.o kernel/hd.o kernel/log.o\
+			kernel/systask.o kernel/hd.o kernel/log.o kernel/flush.o\
 			kernel/kliba.o kernel/klib.o\
 			lib/syslog.o\
 			mm/main.o mm/forkexit.o mm/exec.o\
@@ -211,5 +211,8 @@ fs/disklog.o: fs/disklog.c
 	$(CC) $(CFLAGS) -o $@ $<
 
 kernel/log.o: kernel/log.c
+	$(CC) $(CFLAGS) -o $@ $<
+
+kernel/flush.o: kernel/flush.c
 	$(CC) $(CFLAGS) -o $@ $<
 
