--- a/Code/command/Makefile
+++ b/Code/command/Makefile
@@ -8,11 +8,11 @@ DASM		= objdump
 CC		= gcc
 LD		= ld
 ASMFLAGS	= -I ../include/ -f elf
-CFLAGS		= -I ../include/ -c -fno-builtin -fno-stack-protector -Wall
+CFLAGS		= -I ../include/ -I ../include/sys/ -c -fno-builtin -fno-stack-protector -Wall
 LDFLAGS		= -Ttext 0x1000
 DASMFLAGS	= -D
 LIB		= ../lib/orangescrt.a
-BIN		= echo pwd ikun touch rm ps kill help
+BIN		= echo pwd ikun touch rm ps kill help cls read edit ls
 
 # All Phony Targets
 .PHONY : everything final clean realclean disasm all install
@@ -59,7 +59,7 @@ ikun.o: ikun.c ../include/type.h ../include/stdio.h
 ikun : ikun.o start.o $(LIB)
 	$(LD) $(LDFLAGS) -o $@ $?
 
-touch.o: touch.c ../include/type.h ../include/stdio.h
+touch.o: touch.c ../include/type.h ../include/stdio.h 
 	$(CC) $(CFLAGS) -o $@ $<
 
 touch : touch.o start.o $(LIB)
@@ -87,4 +87,28 @@ help.o: help.c ../include/type.h ../include/stdio.h
 	$(CC) $(CFLAGS) -o $@ $<
 
 help : help.o start.o $(LIB)
+	$(LD) $(LDFLAGS) -o $@ $?
+
+cls.o: cls.c ../include/type.h ../include/stdio.h
+	$(CC) $(CFLAGS) -o $@ $<
+
+cls : cls.o start.o $(LIB)
+	$(LD) $(LDFLAGS) -o $@ $?
+
+read.o: read.c ../include/type.h ../include/stdio.h
+	$(CC) $(CFLAGS) -o $@ $<
+
+read : read.o start.o $(LIB)
+	$(LD) $(LDFLAGS) -o $@ $?
+
+edit.o:edit.c ../include/type.h ../include/stdio.h
+	$(CC) $(CFLAGS) -o $@ $<
+
+edit :edit.o start.o $(LIB)
+	$(LD) $(LDFLAGS) -o $@ $?
+
+ls.o:ls.c ../include/type.h ../include/stdio.h
+	$(CC) $(CFLAGS) -o $@ $<
+
+ls :ls.o start.o $(LIB)
 	$(LD) $(LDFLAGS) -o $@ $?
