stack overflow and canary

--- a/Code/command/Makefile
+++ b/Code/command/Makefile
@@ -12,7 +12,7 @@ CFLAGS		= -I ../include/ -c -fno-builtin -fno-stack-protector -Wall
 LDFLAGS		= -Ttext 0x1000
 DASMFLAGS	= -D
 LIB		= ../lib/orangescrt.a
-BIN		= echo pwd
+BIN		= echo pwd attack canary
 
 # All Phony Targets
 .PHONY : everything final clean realclean disasm all install
@@ -45,10 +45,26 @@ echo.o: echo.c ../include/type.h ../include/stdio.h
 	$(CC) $(CFLAGS) -o $@ $<
 
 echo : echo.o start.o $(LIB)
-	$(LD) $(LDFLAGS) -o $@ $?
+	$(LD) $(LDFLAGS) -o $@ $? 
 
 pwd.o: pwd.c ../include/type.h ../include/stdio.h
 	$(CC) $(CFLAGS) -o $@ $<
 
 pwd : pwd.o start.o $(LIB)
-	$(LD) $(LDFLAGS) -o $@ $?
+	$(LD) $(LDFLAGS) -o $@ $? 
+
+attack.o: attack.c ../include/type.h ../include/stdio.h
+	$(CC) $(CFLAGS) -o $@ $<
+
+attack : attack.o start.o $(LIB)
+	$(LD) $(LDFLAGS) -o $@ $? 
+
+	
+canary.o: canary.c ../include/type.h ../include/stdio.h
+	$(CC) $(CFLAGS) -o $@ $<
+
+canary : canary.o start.o $(LIB)
+	$(LD) $(LDFLAGS) -o $@ $? 
+
+
+
